--- a/Calculadora.html
+++ b/Calculadora.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Calculadora web</title>
+    <link type="text/css" href="Calculadora.css" rel="stylesheet">
 </head>
 <body style="background-color: rgb(117, 188, 116);">
     <div class="container my-5">
